--- a/index.html
+++ b/index.html
@@ -7,7 +7,42 @@
  <title>Calculator</title>
 </head>
 <body>
+ <h1>Calculator Project</h1>
+ <div class="calculator">
  
- <script src="script.js"></script>
+ <div class="container">
+  
+
+  <div class="display">123</div>
+  
+
+  <button value="clear" class="grid-item">C</button>
+  <button value="degree" class="grid-item">+/-</button>
+  <button value="percent" class="grid-item">%</button>
+  <button value="/" class="grid-item">/</button>
+
+  <button value="7" class="grid-item">7</button>
+  <button value="8" class="grid-item">8</button>
+  <button value="9" class="grid-item">9</button>
+  <button value="X"class="grid-item" >X</button>
+
+
+  <button value="4" class="grid-item">4</button>
+  <button value="5" class="grid-item">5</button>
+  <button value="6" class="grid-item">6</button>
+  <button value="-" class="grid-item">-</button>
+  
+  <button value="1" class="grid-item">1</button>
+  <button value="2" class="grid-item">2</button>
+  <button value="3" class="grid-item">3</button>
+  <button value="+" class="grid-item">+</button>
+
+  <button value="0" class="zero">0</button>
+  <button value="." class="grid-item">.</button>
+  <button value="equal" id="equal" class="grid-item">=</button> 
+ </div>
+ </div>
+ 
+<script src="script.js"></script>
 </body>
 </html>
