--- a/index.html
+++ b/index.html
@@ -9,36 +9,34 @@
 <body>
  <h1>Calculator Project</h1>
 
- <div class="calculator">
  <div class="container">
  <div class="display">1234</div>
   
-  <button value="clear" class="grid-item">C</button>
-  <button value="degree" class="grid-item">+/-</button>
-  <button value="percent" class="grid-item">%</button>
-  <button value="/" class="grid-item">/</button>
+  <button value="clear" id= "clear" class="grid-item">C</button>
+  <button value="percent" class="operator">%</button>
+  <button value="/" class="operator">/</button>
 
-  <button value="7" class="grid-item">7</button>
-  <button value="8" class="grid-item">8</button>
-  <button value="9" class="grid-item">9</button>
-  <button value="X"class="grid-item" >X</button>
+  <button value="7" class="number">7</button>
+  <button value="8" class="number">8</button>
+  <button value="9" class="number">9</button>
+  <button value="X"class="operator" >X</button>
 
 
-  <button value="4" class="grid-item">4</button>
-  <button value="5" class="grid-item">5</button>
-  <button value="6" class="grid-item">6</button>
-  <button value="-" class="grid-item">-</button>
+  <button value="4" class="number">4</button>
+  <button value="5" class="number">5</button>
+  <button value="6" class="number">6</button>
+  <button value="-" class="operator">-</button>
   
-  <button value="1" class="grid-item">1</button>
-  <button value="2" class="grid-item">2</button>
-  <button value="3" class="grid-item">3</button>
-  <button value="+" class="grid-item">+</button>
+  <button value="1" class="number">1</button>
+  <button value="2" class="number">2</button>
+  <button value="3" class="number">3</button>
+  <button value="+" class="operator">+</button>
 
-  <button value="0" class="zero">0</button>
-  <button value="." class="grid-item">.</button>
-  <button value="equal" id="equal" class="grid-item">=</button> 
+  <button value="0" id="zero" class="number">0</button>
+  <button value="." class="decimal">.</button>
+  <button value="equal" class="equal">=</button> 
  </div>
- </div>
+ 
  
 <script src="script.js"></script>
 </body>
