Complete calculator logic

--- a/index.html
+++ b/index.html
@@ -10,27 +10,27 @@
  <h1>Calculator Project</h1>
 
  <div class="container">
- <div class="display">1234</div>
-  
-  <button value="clear" id= "clear" class="grid-item">C</button>
+ <div class="display">0</div>
+
+  <button value="clear" id= "clear" class="clear">C</button>
   <button value="percent" class="operator">%</button>
   <button value="/" class="operator">/</button>
 
   <button value="7" class="number">7</button>
   <button value="8" class="number">8</button>
   <button value="9" class="number">9</button>
-  <button value="X"class="operator" >X</button>
+  <button value="*"class="operator"  >X</button>
 
 
   <button value="4" class="number">4</button>
   <button value="5" class="number">5</button>
   <button value="6" class="number">6</button>
-  <button value="-" class="operator">-</button>
+  <button value="-" class="operator"  >-</button>
   
   <button value="1" class="number">1</button>
   <button value="2" class="number">2</button>
   <button value="3" class="number">3</button>
-  <button value="+" class="operator">+</button>
+  <button value="+" class="operator" >+</button>
 
   <button value="0" id="zero" class="number">0</button>
   <button value="." class="decimal">.</button>
